--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/node": "^22.4.2",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   },
   "name": "server",
@@ -52,8 +53,9 @@
     "undefsafe": "^2.0.5"
   },
   "scripts": {
-    "start": "nodemon app.js",
-    "dev": "nodemon app.ts"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts"
   },
   "keywords": [],
   "author": "",
