--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node index.js",
     "dev": "ts-node-dev --respawn --transpile-only index.ts"
   },
   "keywords": [],
