--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "name": "server",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.7",
